syntax = "proto3";

package my_service;

import "google/protobuf/timestamp.proto";

option go_package = "myauth/handlers";

// Api service: Login for auth;
service MyServiceAPI {
  rpc Login(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string username = 1; // mandatory, must not be empty
  string password = 2;
  string session_id = 3;  // mandatory, must not be empty
}

message LoginResponse {
  string token = 1;                             // JWT for MyServiceAPI.MyService* api access
  google.protobuf.Timestamp expires_at = 2;     // token expiration time
  string role = 3;                              // user role
}
